--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,30 +2,41 @@
     <div *ngIf="!loading" class="body">
         <img class="logo" src="../../../assets/img/login.png" alt="Login">
         <h1>Login</h1>
-        <form (ngSubmit)="login()" [formGroup]="loginUsuario">
+        <form (ngSubmit)="loginC()" [formGroup]="loginUsuarioC">
             <div class="form-floating mb-3">
                 <input type="email" formControlName="email" class="form-control" placeholder="name@example.com">
                 <label>Email</label>
-                <span *ngIf="loginUsuario.get('email')?.hasError('required') && loginUsuario.get('email')?.touched" class="text-danger errorLabel">
+                <span *ngIf="loginUsuarioC.get('email')?.hasError('required') && loginUsuarioC.get('email')?.touched" class="text-danger errorLabel">
                     El <strong>correo</strong> es requerido
                 </span>
-                <span *ngIf="loginUsuario.get('email')?.hasError('email') && loginUsuario.get('email')?.touched" class="text-danger errorLabel">
+                <span *ngIf="loginUsuarioC.get('email')?.hasError('email') && loginUsuarioC.get('email')?.touched" class="text-danger errorLabel">
                     El <strong>correo</strong> es invalido
                 </span>
             </div>
             <div class="form-floating mb-3">
                 <input type="password" formControlName="password" class="form-control" placeholder="Password">
                 <label>Password</label>
-                <span *ngIf="loginUsuario.get('password')?.hasError('required') && loginUsuario.get('password')?.touched" class="text-danger errorLabel">
+                <span *ngIf="loginUsuarioC.get('password')?.hasError('required') && loginUsuarioC.get('password')?.touched" class="text-danger errorLabel">
                     La <strong>password</strong> es requerida
                 </span>
             </div>
             <div class="d-grid gap-2">
-                <button type="submit" class="btn btn-primary btn-lg" [disabled]="loginUsuario.invalid" >Ingresar</button>
+                <button type="submit" class="btn btn-primary btn-lg" [disabled]="loginUsuarioC.invalid" >Ingresar</button>
             </div>
-            <p class="mt-3">No tienes cuenta? <a routerLink="/registrar-usuario">Registrar</a></p>
-            <a class="mt-3" routerLink="/recuperar-password">Recuperar Contraseña</a>
         </form>
+        <hr>
+        <form (ngSubmit)="onSignInSubmit()" [formGroup]="loginUsuarioT">
+            <div class="form-floating mb-3">
+                <input type="text" formControlName="numTelefono" class="form-control" placeholder="name@example.com">
+                <label>Número de teléfono</label>
+            </div>
+            <div class="d-grid gap-2">
+                <button type="submit" class="btn btn-primary btn-lg" [disabled]="loginUsuarioT.invalid" >Ingresar</button>
+            </div>
+        </form>
+        <div #recaptchaContainer></div>
+        <p class="mt-3">No tienes cuenta? <a routerLink="/registrar-usuario">Registrar</a></p>
+        <a class="mt-3" routerLink="/recuperar-password">Recuperar Contraseña</a>
     </div>
     <app-spinner *ngIf="loading"></app-spinner>
 </div>
