--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -13,11 +13,11 @@
       </ul>
 
       <div class="col-md-3 text-end">
-        <button type="button" class="btn btn-outline-primary me-2" (click)="logOut()">LogOut</button>   
+        <button type="button" class="btn btn-outline-primary me-2" (click)="logOut()">Cerrar sesión</button>   
       </div>
     </header>
     <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-        <h1 class="display-4 fw-normal">Bienvodo!</h1>
+        <h1 class="display-4 fw-normal">¡Bienvenido!</h1>
         <p class="fs-5 text-muted">{{ dataUser?.uid }}</p>
       </div>
   </div>
